1920.	[bug]		Update windows socket code. [RT #14965]

1919.	[bug]		dig's +sigchase code overhauled. [RT #14933]

1918.	[bug]		The DLV code has been re-worked to make no longer
			query order sensitive. [RT #14933]

1917.	[func]		dig now warns if 'RA' is not set in the answer when
			'RD' was set in the query.  host/nslookup skip servers
			that fail to set 'RA' when 'RD' is set unless a server
			is explicitly set.  [RT #15005]

1916.	[func]		host/nslookup now continue (default)/fail on SERVFAIL.
			[RT #15006]

1915.	[func]		dig now has a '-q queryname' and '+showsearch' options.
			[RT #15034]

1914.	[bug]		Strings returned from cfg_obj_asstring() should be
			treated as read-only.  The prototype for 
			cfg_obj_asstring() has been updated to reflect this.
			[RT #15256]

1913.	[func]		Automatic empty zone creation for D.F.IP6.ARPA and
			friends.  Note: RFC 1918 zones are not yet covered by
			this but are likely to be in a future release.

			New options: empty-server, empty-contact,
			empty-zones-enable and disable-empty-zone.

1912.	[func]		ISC string copy API.

1911.	[func]		Attempt to make the amount of work performed in a
			iteration self tuning.  The covers nodes clean from
			the cache per iteration, nodes written to disk when
			rewriting a master file and nodes destroyed per
			iteration when destroying a zone or a cache.
			[RT #14996]

1910.	[cleanup]	Don't add DNSKEY records to the additional section.

1909.	[bug]		ixfr-from-differences failed to ensure that the
			serial number increased. [RT #15036]

1908.	[func]		named-checkconf now validates update-policy entries.
			[RT #14963]

1907.	[bug]		Extend ISC_SOCKADDR_FORMATSIZE and
			ISC_NETADDR_FORMATSIZE to allow for scope details.

1906.	[func]		x86 and x86_64 now have seperate atomic locking
			implementations.

1905.	[bug]		Recursive clients soft quota support wasn't working
			as expected. [RT #15103]

1904.	[bug]		A escaped character is, potentially, converted to